# tachyon-rerank

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.qnn.local  Makefile  README.md  SECURITY.md  docker-compose.qnn.local.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  REPORT.md  bench_results.csv  bench_summary.md
docs/: ARCHITECTURE.md  DEPENDENCIES.md  ENV_VARS.md  QNN_SETUP.md
examples/: README.md
examples/code_search/: README.md  example.json  request.score_batch.json
examples/rag_rerank/: README.md  example.json  request.score_batch.json
examples/semantic_search/: README.md  example.json  request.score.json
models/: ip_gemm_static.onnx  ip_matmul.onnx  ip_matmul_static.onnx
native/qnnshim/: Cargo.toml  README.md  build.rs
native/qnnshim/src/: cpu.rs  lib.rs  tach_qnn_fc.c  tach_qnn_fc.h
scripts/: bench_sweep.py  bump_version.py  check_runtime.sh  entrypoint.sh  fetch_public_demo_data.py  gen_ip_matmul_onnx.py
services/tachann/: Cargo.toml
services/tachann/benches/: bench_tachann.rs
services/tachann/src/: api.rs  backend.rs  main.rs
services/tachann/tests/: e2e_server.rs  use_case_examples.rs
services/tachann/tests/common/: mod.rs
