[package]
name="tachyon-rerank"
version="0.1.1"
edition="2021"
description="Retrieval-first reranking microservice with QNN-first edge acceleration and CPU fallback."
license="MIT"

[dev-dependencies]
criterion = "0.5" 
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[[bin]]
name = "tachyon-rerank"
path = "src/main.rs"

[[bin]]
name = "tachyon-rerank-bench"
path = "src/bin/bench.rs"

[dependencies]
actix-web="4"
serde={version="1",features=["derive"]}
serde_json="1"
once_cell="1.19"
anyhow="1.0"
rayon="1.10"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic","ndarray"] }
libloading="0.9"
log="0.4"
env_logger="0.11"
num_cpus = "1.16"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
